<resources>
    <string name="app_name">Track My Weight</string>

    <string name="title_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">- Sign in, or register -</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="username_too_short">Username must be at least 5 characters long</string>
    <string name="password_too_short">Password must be at least 5 characters long</string>
    <string name="username_taken">Username is taken</string>
    <string name="username_missing">Username not found</string>
    <string name="remember_me">Remember Me</string>

    <string name="auth_error_invalid_credentials">Invalid username or password.</string>
    <string name="auth_error_email_in_use">That username is already taken.</string>
    <string name="auth_error_network">Network error. Check your connection.</string>
    <string name="auth_error_unknown">Unknown error. Please try again.</string>
    <string name="auth_error_bad_read">Unable to initialize database values!</string>

    <string name="title_home">Home</string>
    <string name="welcome">Welcome, </string>
    <string name="welcome_message">Welcome, %s!</string>
    <string name="home_welcome">Welcome!</string>
    <string name="home_most_recent_weight">Most Recent Weight:</string>
    <string name="home_goal_weight">Goal Weight:</string>

    <string name="title_view_list">View List</string>
    <string name="title_weight_history">Weight History</string>
    <string name="view_list_title_date">Date</string>
    <string name="view_list_title_weight">Weight</string>
    <string name="delete">Delete</string>
    <string name="delete_error">Unable to delete entry, try again.</string>

    <string name="title_new_weight">New Weight</string>
    <string name="enter_new_weight">Enter a New Weight</string>
    <string name="new_weight_description">Enter your weight in\n%s</string>
    <string name="new_weight_submit">Submit</string>
    <string name="new_weight_hint">new weight in %s</string>
    <string name="new_weight_error">Unable to save data, try again.</string>

    <string name="title_settings">Settings</string>
    <string name="edit_goal_weight">Edit Goal Weight</string>
    <string name="apply">Save &amp; Apply</string>

    <string name="title_measurement_unit">Measurement Unit</string>
    <string name="measurement_pounds">pounds (lbs)</string>
    <string name="measurement_kilograms">kilograms (kgs)</string>
    <string name="measurement_pounds_short">lbs</string>
    <string name="measurement_kilograms_short">kg</string>

    <string name="title_notifications">Notifications</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="disable_notifications">Disable Notifications</string>
    <string name="notifications_enabled">Notifications are enabled.</string>
    <string name="notifications_disabled">Notifications are disabled.</string>
    <string name="notifications_permission">Allow this app to send notifications?</string>

    <string name="title_account">Account</string>
    <string name="title_account_settings">Account Settings</string>
    <string name="account_nickname_title">Account Nickname</string>
    <string name="new_nickname_hint">new nickname [a–Z 0–9]</string>
    <string name="account_sign_out">Sign Out</string>

    <string name="title_permission">Permission Needed</string>
    <string name="permission_approve">Allow</string>
    <string name="permission_deny">Reject</string>

    <string name="title_graph">Weight History Graph</string>
    <string name="reset_graph">Reset Graph</string>

    <string name="title_estimated_time">Goal Reached Estimation:</string>

    <string name="no_records">No records</string>
    <string name="no_goal_weight">unset</string>
    <string name="temporary">Temporary</string>
    <string name="error_empty">""</string>
    <string name="not_applicable">N/A</string>

</resources>