<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.turco_michael_weight_tracking.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_view_list"
        android:name="com.turco_michael_weight_tracking.ui.view_list.ViewListFragment"
        android:label="@string/title_view_list"
        tools:layout="@layout/fragment_view_list">

        <action
            android:id="@+id/action_view_list_to_graph"
            app:destination="@id/navigation_graph"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <!-- got help from https://developer.android.com/guide/navigation/use-graph/animate-transitions -->
    </fragment>

    <fragment
        android:id="@+id/navigation_new_weight"
        android:name="com.turco_michael_weight_tracking.ui.new_weight.NewWeightFragment"
        android:label="@string/title_new_weight"
        tools:layout="@layout/fragment_new_weight" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.turco_michael_weight_tracking.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.turco_michael_weight_tracking.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_graph"
        android:name="com.turco_michael_weight_tracking.ui.graph.GraphFragment"
        android:label="@string/title_graph"
        tools:layout="@layout/fragment_graph" />
</navigation>