<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.new_weight.NewWeightFragment">

    <TextView
        android:id="@+id/title_new_weight"
        android:layout_width="347dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/enter_new_weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_new_weight"
        android:layout_width="284dp"
        android:layout_height="83dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/new_weight_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_weight_field"
        android:layout_width="299dp"
        android:layout_height="68dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="56dp"
        android:autofillHints="newWeight"
        android:ems="10"
        android:hint="@string/new_weight_hint"
        android:inputType="number|numberDecimal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_new_weight" />

    <Button
        android:id="@+id/new_weight_submit"
        android:layout_width="192dp"
        android:layout_height="53dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="169dp"
        android:text="@string/new_weight_submit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_weight_field" />
</androidx.constraintlayout.widget.ConstraintLayout>