<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/title_settings"
        android:layout_width="347dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/title_settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="5dp"
        app:cardBackgroundColor="@color/blue_light"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/notifications_state"
                android:layout_width="347dp"
                android:layout_height="45dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/notifications_disabled"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_notifications" />

            <TextView
                android:id="@+id/title_notifications"
                android:layout_width="347dp"
                android:layout_height="45dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/title_notifications"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/toggle_notifications"
                android:layout_width="276dp"
                android:layout_height="57dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/enable_notifications"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notifications_state" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        app:cardBackgroundColor="@color/teal_light"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/goal_weight_title"
                android:layout_width="347dp"
                android:layout_height="45dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/edit_goal_weight"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/edit_goal_weight_apply"
                android:layout_width="163dp"
                android:layout_height="54dp"
                android:layout_marginBottom="8dp"
                android:text="@string/apply"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_goal_weight_field" />

            <EditText
                android:id="@+id/edit_goal_weight_field"
                android:layout_width="348dp"
                android:layout_height="68dp"
                android:layout_marginStart="27dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="27dp"
                android:autofillHints="@string/edit_goal_weight"
                android:ems="10"
                android:hint="@string/new_weight_hint"
                android:inputType="number|numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/goal_weight_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>